tests/test70.rael.exp
Error [tests/test70.rael:8:11]: Division by zero
|         1 / :n
|           ^
